Fixed stylesheet link

--- a/yatzi.html
+++ b/yatzi.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link rel="stylesheet" href="yatzi.css"
+   <link rel="stylesheet" href="yatzi.css">
 
 </head>
 
 <body> 
-    <h2>YATZY</h2>
+    <h2>YATZY phille</h2>
 
     <table>
         <div>
