--- a/yatzi.html
+++ b/yatzi.html
@@ -12,160 +12,160 @@
         <div>
         <tr>
             <td class="färgmörk" >Spelare/Players</td> 
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
+            <td><input class="grå" type="text"></td>
+            <td><input class="grå" type="text"></td>
+            <td><input class="grå" type="text"></td>
+            <td><input class="grå" type="text"></td>
        
         </tr>
     </div>
         <tr>
             <td >Ettor </td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type="number"></td>
+            <td><input type="number"></td>
+            <td><input type="number"></td>
+            <td><input type="number"></td>
 
         </tr>
         <tr>
             <td>Tvåor </td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type="number"></td>
+            <td><input type="number"></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
 
         </tr>
 
         <tr>
             <td >Treor </td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
 
         </tr>
         <tr>
             <td>Fyror</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
 
         </tr>
         <tr>
             <td>Femmor </td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
 
         </tr>
         <tr>
             <td>Sexor</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
 
         </tr>
 
         <tr>
             <td class="färgmörk">Summa</td> 
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
+            <td><input class="grå" type="number" ></td>
+            <td><input class="grå" type="number" ></td>
+            <td><input class="grå" type="number" ></td>
+            <td><input class="grå" type="number" ></td>
 
         </tr>
         <tr>
             <td class="färgmörk">Bonus</td> 
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
+            <td><input class="grå" type= "number" ></td>
+            <td><input class="grå" type= "number" ></td>
+            <td><input class="grå" type= "number" ></td>
+            <td><input class="grå" type= "number" ></td>
 
         </tr>
 
         <tr>
             <td>Par</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
         <tr>
             <td>Två par</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
         <tr>
             <td>Tretal</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
         <tr>
             <td>Fyrtal</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
         <tr>
             <td>Liten stege</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
 
         <tr>
             <td>Stor stege</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
         <tr>
             <td>Kåk</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
         <tr>
             <td>Chans</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
 
         <tr>
             <td>Yatzy</td> 
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
-            <td><input type=""text></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
+            <td><input type= "number" ></td>
 
         </tr>
         <tr>
             <td class="färgmörk">Total</td> 
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå"type=""text></td>
+            <td><input class="grå" type= "text" ></td>
+            <td><input class="grå" type= "text" ></td>
+            <td><input class="grå" type= "text" ></td>
+            <td><input class="grå"type= "text" ></td>
 
         </tr>
         
