--- a/yatzi.html
+++ b/yatzi.html
@@ -72,18 +72,18 @@
 
         <tr>
             <td class="färgmörk">Summa</td> 
-            <td><input class="grå" type="number" ></td>
-            <td><input class="grå" type="number" ></td>
-            <td><input class="grå" type="number" ></td>
-            <td><input class="grå" type="number" ></td>
+            <td><input class="grå" type="text" ></td>
+            <td><input class="grå" type="text" ></td>
+            <td><input class="grå" type="text" ></td>
+            <td><input class="grå" type="text" ></td>
 
         </tr>
         <tr>
             <td class="färgmörk">Bonus</td> 
-            <td><input class="grå" type= "number" ></td>
-            <td><input class="grå" type= "number" ></td>
-            <td><input class="grå" type= "number" ></td>
-            <td><input class="grå" type= "number" ></td>
+            <td><input class="grå" type= "text" ></td>
+            <td><input class="grå" type= "text" ></td>
+            <td><input class="grå" type= "text" ></td>
+            <td><input class="grå" type= "text" ></td>
 
         </tr>
 
