--- a/yatzi.html
+++ b/yatzi.html
@@ -6,13 +6,13 @@
 </head>
 
 <body> 
-    <h1>Yatzy</h1>
+    <h1>YATZY</h1>
 
     <table width = "200px;" border = "1">
         
         <tr>
             
-            <td colspan = "1" class="färgmörk">Spelare/Players</td> 
+            <td colspan = "1" class="färgmörk zoom">Spelare/Players</td> 
             <td><input class="grå" type=""text></td>
             <td><input class="grå" type=""text></td>
             <td><input class="grå" type=""text></td>
@@ -21,7 +21,7 @@
         </tr>
    
         <tr>
-            <td >Ettor </td> 
+            <td  >Ettor </td> 
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
@@ -71,7 +71,7 @@
         </tr>
 
         <tr>
-            <td class="färgmörk">Summa</td> 
+            <td class="färgmörk zoom">Summa</td> 
             <td><input class="grå" type="number" ></td>
             <td><input class="grå" type="number" ></td>
             <td><input class="grå" type="number" ></td>
@@ -79,7 +79,7 @@
 
         </tr>
         <tr>
-            <td class="färgmörk">Bonus</td> 
+            <td class="färgmörk zoom">Bonus</td> 
             <td><input class="grå" type= "number" ></td>
             <td><input class="grå" type= "number" ></td>
             <td><input class="grå" type= "number" ></td>
@@ -162,7 +162,7 @@
 
         </tr>
         <tr>
-            <td class="färgmörk">Total</td> 
+            <td class="färgmörk zoom">Total</td> 
             <td><input class="grå" type= "text" ></td>
             <td><input class="grå" type= "text" ></td>
             <td><input class="grå" type= "text" ></td>
