--- a/yatzi.html
+++ b/yatzi.html
@@ -13,10 +13,10 @@
         <tr>
             
             <td colspan = "1" class="färgmörk zoom">Spelare/Players</td> 
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
-            <td><input class="grå" type=""text></td>
+            <td><input class="grå zoom" type=""text></td>
+            <td><input class="grå zoom" type=""text></td>
+            <td><input class="grå zoom" type=""text></td>
+            <td><input class="grå zoom" type=""text></td>
        
         </tr>
    
