lagt till step på min och max värde

--- a/yatzi.html
+++ b/yatzi.html
@@ -22,52 +22,52 @@
    
         <tr>
             <td  >Ettor </td> 
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
+            <td><input type="number" step="1" min ="0" max="6"></td>
+            <td><input type="number" step="1" min ="0" max="6"></td>
+            <td><input type="number" step="1" min ="0" max="6"></td>
+            <td><input type="number" step="1" min ="0" max="6"></td>
 
         </tr>
         <tr>
             <td>Tvåor </td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
+            <td><input type="number" step="2" min ="0" max="10"></td>
+            <td><input type="number" step="2" min ="0" max="10"></td>
+            <td><input type="number" step="2" min ="0" max="10"></td>
+            <td><input type="number" step="2" min ="0" max="10"></td>
 
 
         </tr>
 
         <tr>
             <td >Treor </td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
+            <td><input type="number" step="3" min ="0" max="15"></td> ></td>
+            <td><input type="number" step="3" min ="0" max="15"></td>
+            <td><input type="number" step="3" min ="0" max="15"></td>
+            <td><input type="number" step="3" min ="0" max="15"></td>
 
         </tr>
         <tr>
             <td>Fyror</td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
+            <td><input type="number" step="4" min ="0" max="20"></td>
+            <td><input type="number" step="4" min ="0" max="20"></td>
+            <td><input type="number" step="4" min ="0" max="20"></td>
+            <td><input type="number" step="4" min ="0" max="20"></td>
 
         </tr>
         <tr>
             <td>Femmor </td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
+            <td><input type="number" step="5" min ="0" max="25"></td>
+            <td><input type="number" step="5" min ="0" max="25"></td>
+            <td><input type="number" step="5" min ="0" max="25"></td>
+            <td><input type="number" step="5" min ="0" max="25"></td>
 
         </tr>
         <tr>
             <td>Sexor</td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
-            <td><input type="number" ></td>
+            <td><input type="number" step="6" min ="0" max="30"></td>
+            <td><input type="number" step="6" min ="0" max="30"></td>
+            <td><input type="number" step="6" min ="0" max="30"></td>
+            <td><input type="number" step="6" min ="0" max="30"></td>
 
         </tr>
 
