--- a/yatzi.html
+++ b/yatzi.html
@@ -179,6 +179,18 @@
 
     <br>
     <button id="count">count</button>
+    <br>
+    <br>
+
+    <button onclick = "rollDice()">Tryck för att slå tärningarna</button>
+    <br>
+    <br>
+    <button id = "Dice1">1</button>
+    <button id = "Dice2">2</button>
+    <button id = "Dice3">3</button>
+    <button id = "Dice4">4</button>
+    <button id = "Dice5">5</button>
+    
     <script src="/Js/Js.js"></script>
 </body>
 </html>
