--- a/yatzi.html
+++ b/yatzi.html
@@ -22,7 +22,7 @@
    
         <tr>
             <td  >Ettor </td> 
-            <td><input type="number"></td>
+            <td><input id="player1_ones" type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
@@ -30,7 +30,7 @@
         </tr>
         <tr>
             <td>Tvåor </td>
-            <td><input type="number"></td>
+            <td><input id="player1_twos" type="number"></td>
             <td><input type="number"></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
@@ -40,7 +40,7 @@
 
         <tr>
             <td >Treor </td>
-            <td><input type="number" ></td>
+            <td><input id="player1_threes" type="number" ></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
@@ -48,7 +48,7 @@
         </tr>
         <tr>
             <td>Fyror</td>
-            <td><input type="number" ></td>
+            <td><input id="player1_fours" type="number" ></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
@@ -56,7 +56,7 @@
         </tr>
         <tr>
             <td>Femmor </td>
-            <td><input type="number" ></td>
+            <td><input id="player1_fives" type="number" ></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
@@ -64,7 +64,7 @@
         </tr>
         <tr>
             <td>Sexor</td>
-            <td><input type="number" ></td>
+            <td><input id="player1_sixes" type="number" ></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
             <td><input type="number" ></td>
@@ -179,6 +179,6 @@
 
     <br>
     <button id="count">count</button>
-    <script src="/Js/Js.js"></script>
+    <script src="./Js/Js.js"></script>
 </body>
 </html>
