skanade ID för sexor

--- a/yatzi.html
+++ b/yatzi.html
@@ -64,9 +64,14 @@
         </tr>
         <tr>
             <td>Sexor</td>
+            <td><input id="player1_sixes" type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
+            <td><input type="number" ></td>
 
         <tr>
             <td class="darkgrey zoom">Summa</td> 
+            <td><input class="grey" type="number" ></td>
             <td><input class="grey" type="number" ></td>
             <td><input class="grey" type="number" ></td>
             <td><input class="grey" type="number" ></td>
@@ -176,15 +181,6 @@
     <br>
     <br>
 
-    <button onclick = "rollDice()">Tryck för att slå tärningarna</button>
-    <br>
-    <br>
-    <button id = "Dice1">1</button>
-    <button id = "Dice2">2</button>
-    <button id = "Dice3">3</button>
-    <button id = "Dice4">4</button>
-    <button id = "Dice5">5</button>
     
-    <script src="/Js/Js.js"></script>
 </body>
 </html>
