steps och addera summa

--- a/yatzi.html
+++ b/yatzi.html
@@ -28,41 +28,41 @@
         </tr>
         <tr>
             <td>Tvåor </td>
-            <td><input id="player1_twos" type="number"></td>
-            <td><input id="player2_twos" type="number"></td>
-            <td><input id="player3_twos" type="number"></td>
-            <td><input id="player4_twos" type="number"></td>
+            <td><input id="player1_twos" type="number" step="2"></td>
+            <td><input id="player2_twos" type="number" step="2"></td>
+            <td><input id="player3_twos" type="number" step="2"></td>
+            <td><input id="player4_twos" type="number" step="2"></td>
         </tr>
 
         <tr>
             <td>Treor </td>
-            <td><input id="player1_threes" type="number"></td>
-            <td><input id="player2_threes" type="number"></td>
-            <td><input id="player3_threes" type="number"></td>
-            <td><input id="player4_threes" type="number"></td>
+            <td><input id="player1_threes" type="number" step="3"></td>
+            <td><input id="player2_threes" type="number" step="3"></td>
+            <td><input id="player3_threes" type="number" step="3"></td>
+            <td><input id="player4_threes" type="number" step="3"></td>
         </tr>
         <tr>
             <td>Fyror</td>
-            <td><input id="player1_fours" type="number"></td>
-            <td><input id="player2_fours" type="number"></td>
-            <td><input id="player3_fours" type="number"></td>
-            <td><input id="player4_fours" type="number"></td>
+            <td><input id="player1_fours" type="number" step="4"></td>
+            <td><input id="player2_fours" type="number" step="4"></td>
+            <td><input id="player3_fours" type="number" step="4"></td>
+            <td><input id="player4_fours" type="number" step="4"></td>
 
         </tr>
         <tr>
             <td>Femmor </td>
-            <td><input id="player1_fives" type="number"></td>
-            <td><input id="player2_fives" type="number"></td>
-            <td><input id="player3_fives" type="number"></td>
-            <td><input id="player4_fives" type="number"></td>
+            <td><input id="player1_fives" type="number" step="5"></td>
+            <td><input id="player2_fives" type="number" step="5"></td>
+            <td><input id="player3_fives" type="number" step="5"></td>
+            <td><input id="player4_fives" type="number" step="5"></td>
 
         </tr>
         <tr>
             <td>Sexor</td>
-            <td><input id="player1_sixes" type="number"></td>
-            <td><input id="player2_sixes" type="number"></td>
-            <td><input id="player3_sixes" type="number"></td>
-            <td><input id="player4_sixes" type="number"></td>
+            <td><input id="player1_sixes" type="number" step="6"></td>
+            <td><input id="player2_sixes" type="number" step="6"></td>
+            <td><input id="player3_sixes" type="number" step="6"></td>
+            <td><input id="player4_sixes" type="number" step="6"></td>
             <tr>
                 <td class="darkgrey zoom">Summa</td>
                 <td><input id="player1_summa" class="grey" type="number"></td>
