--- a/yatzi.html
+++ b/yatzi.html
@@ -178,6 +178,13 @@
     <button id="Dice3">3</button>
     <button id="Dice4">4</button>
     <button id="Dice5">5</button>
+    <br>
+    <input id = svar1 class = "check" type= "checkbox">
+    <input id = svar2 class = "check" type= "checkbox">
+    <input id = svar3 class = "check" type= "checkbox">
+    <input id = svar4 class = "check" type= "checkbox">
+    <input id = svar5 class = "check" type= "checkbox">
+
 
     <script src="/Js/Js.js"></script>
 </body>
