--- a/yatzi.html
+++ b/yatzi.html
@@ -21,48 +21,48 @@
 
         <tr>
             <td>Ettor </td>
-            <td><input id="player1_ones" type="number"></td>
-            <td><input id="player2_ones" type="number"></td>
-            <td><input id="player3_ones" type="number"></td>
-            <td><input id="player4_ones" type="number"></td>
+            <td><input id="player1_ones" class="player1 sum1" type="number"></td>
+            <td><input id="player2_ones" class="player2 sum2" type="number"></td>
+            <td><input id="player3_ones" class="player3 sum3" type="number"></td>
+            <td><input id="player4_ones" class="player4 sum4" type="number"></td>
         </tr>
         <tr>
             <td>Tvåor </td>
-            <td><input id="player1_twos" type="number" step="2"></td>
-            <td><input id="player2_twos" type="number" step="2"></td>
-            <td><input id="player3_twos" type="number" step="2"></td>
-            <td><input id="player4_twos" type="number" step="2"></td>
+            <td><input id="player1_twos" class="player1 sum1" type="number" step="2"></td>
+            <td><input id="player2_twos" class="player2 sum2" type="number" step="2"></td>
+            <td><input id="player3_twos" class="player3 sum3" type="number" step="2"></td>
+            <td><input id="player4_twos" class="player4 sum4" type="number" step="2"></td>
         </tr>
 
         <tr>
             <td>Treor </td>
-            <td><input id="player1_threes" type="number" step="3"></td>
-            <td><input id="player2_threes" type="number" step="3"></td>
-            <td><input id="player3_threes" type="number" step="3"></td>
-            <td><input id="player4_threes" type="number" step="3"></td>
+            <td><input id="player1_threes" class="player1 sum1" type="number" step="3"></td>
+            <td><input id="player2_threes" class="player2 sum2" type="number" step="3"></td>
+            <td><input id="player3_threes" class="player3 sum3" type="number" step="3"></td>
+            <td><input id="player4_threes" class="player4 sum4" type="number" step="3"></td>
         </tr>
         <tr>
             <td>Fyror</td>
-            <td><input id="player1_fours" type="number" step="4"></td>
-            <td><input id="player2_fours" type="number" step="4"></td>
-            <td><input id="player3_fours" type="number" step="4"></td>
-            <td><input id="player4_fours" type="number" step="4"></td>
+            <td><input id="player1_fours"  class="player1 sum1" type="number" step="4"></td>
+            <td><input id="player2_fours" class="player2 sum2" type="number" step="4"></td>
+            <td><input id="player3_fours" class="player3 sum3" type="number" step="4"></td>
+            <td><input id="player4_fours" class="player4 sum4" type="number" step="4"></td>
 
         </tr>
         <tr>
             <td>Femmor </td>
-            <td><input id="player1_fives" type="number" step="5"></td>
-            <td><input id="player2_fives" type="number" step="5"></td>
-            <td><input id="player3_fives" type="number" step="5"></td>
-            <td><input id="player4_fives" type="number" step="5"></td>
+            <td><input id="player1_fives" class="player1 sum1" type="number" step="5"></td>
+            <td><input id="player2_fives" class="player2 sum2" type="number" step="5"></td>
+            <td><input id="player3_fives" class="player3 sum3" type="number" step="5"></td>
+            <td><input id="player4_fives" class="player4 sum4" type="number" step="5"></td>
 
         </tr>
         <tr>
             <td>Sexor</td>
-            <td><input id="player1_sixes" type="number" step="6"></td>
-            <td><input id="player2_sixes" type="number" step="6"></td>
-            <td><input id="player3_sixes" type="number" step="6"></td>
-            <td><input id="player4_sixes" type="number" step="6"></td>
+            <td><input id="player1_sixes" class="player1 sum1" type="number" step="6"></td>
+            <td><input id="player2_sixes" class="player2 sum2" type="number" step="6"></td>
+            <td><input id="player3_sixes" class="player3 sum3" type="number" step="6"></td>
+            <td><input id="player4_sixes" class="player4 sum4" type="number" step="6"></td>
             <tr>
                 <td class="darkgrey zoom">Summa</td>
                 <td><input id="player1_summa" class="grey" type="number"></td>
