--- a/yatzi.html
+++ b/yatzi.html
@@ -9,14 +9,18 @@
 <body>
     <h1 class="focus">YATZY</h1>
 
+    <button type="button" id="btnChangePlayer">Byt spelare</button>
+    <input type="number" id="player_turn" value="0"><br>
+    <br>
+
     <table width="200px;" border="1">
 
         <tr>
             <td colspan="1" class="darkgrey zoom">Spelare/Players</td>
-            <td><input class="grey zoom" type="" text></td>
-            <td><input class="grey zoom" type="" text></td>
-            <td><input class="grey zoom" type="" text></td>
-            <td><input class="grey zoom" type="" text></td>
+            <td><input class="player active" id = "player1" type="text"></td>
+            <td><input class=" player" id = "player2" type="text"></td>
+            <td><input class=" player" id = "player3" type="text"></td>
+            <td><input class=" player" id = "player4" type="text"></td>
         </tr>
 
         <tr>
